melior/src/dialect/snapshots/melior__dialect__ods__tests__alloc_builder.snap
---
source: melior/src/dialect/ods.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) {
    %0 = llvm.alloca %arg0 x i64 {alignment = 8 : i64} : (i64) -> !llvm.ptr
    llvm.return
  }
}
